# crier

./: .gitignore  .zenodo.json  404.html  CITATION.cff  CLAUDE.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml
docs/: getting-started.md  index.md
docs/guides/: backfill.md  configuration.md  github-action.md  tracking.md
docs/plans/: 2026-02-13-platform-plugins-design.md  2026-02-13-platform-plugins.md  2026-02-17-global-config-refactor.md  2026-02-20-crier-plugin-design.md
docs/reference/: cli.md  front-matter.md
docs/superpowers/plans/: 2026-06-04-campaign.md  2026-06-04-publish-one-orchestrator.md  2026-06-04-reconcile.md
docs/superpowers/specs/: 2026-06-04-bulk-publish-hardening-design.md
getting-started/: index.html
guides/backfill/: index.html
guides/configuration/: index.html
guides/github-action/: index.html
guides/tracking/: index.html
reference/cli/: index.html
reference/front-matter/: index.html
search/: search_index.json
site/: 404.html  index.html
site/getting-started/: index.html
site/guides/backfill/: index.html
site/search/: search_index.json
src/crier/: SKILL.md  __init__.py  campaign.py  checker.py  cli.py  config.py  feed.py  mcp_server.py  publishing.py  reconcile.py  registry.py  rewrite.py  scheduler.py  skill.py  threading.py  utils.py
src/crier/llm/: __init__.py  (+2 more)
tests/: conftest.py  test_campaign.py  test_checker.py  test_cli.py  test_config.py  test_converters.py  test_fediverse.py  test_feed.py  test_llm.py  test_mcp.py  test_nostr.py  test_platforms.py  test_plugin_discovery.py  test_publishing.py  test_reconcile.py  test_registry.py  test_rewrite.py  test_scheduler.py  test_skill.py  test_stats.py  test_threading.py  test_utils.py
(+7 files in other folders)
